@@ -6,7 +6,6 @@ use 5.024;
 use feature 'signatures';
 use MooX::Role::Parameterized;
 use Carp::Clan qw(^Net::Checkpoint::Management::v1);
-use Clone qw( clone );
 use Moo::Role; # last for cleanup
 
 no warnings "experimental::signatures";
@@ -29,6 +28,7 @@ requires qw( _create _list _get _update _delete );
             update   => 'set-package',
             delete   => 'delete-package',
             list_key => 'packages',
+            id_keys  => [qw( uid name )],
         },
         {
             object   => 'accessrules',
@@ -39,6 +39,7 @@ requires qw( _create _list _get _update _delete );
             update   => 'set-access-rule',
             delete   => 'delete-access-rule',
             list_key => 'rulebase',
+            id_keys  => ['uid', 'name', 'rule-number'],
         },
     ]);
 
@@ -148,11 +149,25 @@ role {
     });
 
     $mop->method('update_' . $params->{singular} => sub ($self, $object, $object_data) {
+        my $updated_data = { %$object, %$object_data };
+        if (exists $params->{id_keys} && ref $params->{id_keys} eq 'ARRAY') {
+            # ensure that only a single key is passed to the update call
+            # the order of keys is the priority
+            my @id_keys = $params->{id_keys}->@*;
+            while (my $key = shift @id_keys) {
+                last
+                    if exists $updated_data->{$key}
+                    && defined $updated_data->{$key};
+            }
+            delete $updated_data->{$_}
+                for @id_keys;
+        }
+
         return $self->_update(join('/',
             '/web_api',
             'v' . $self->api_version,
             $params->{update}
-        ), $object, $object_data);
+        ), $updated_data);
     });
 
     $mop->method('delete_' . $params->{singular} => sub ($self, $object) {
